[gd_scene load_steps=2 format=3 uid="uid://c8uj83j820gw3"]

[ext_resource type="Script" path="res://Scenes/TutorialMultiplayerController.gd" id="1_22qk0"]

[node name="TutorialLobbyScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = 23.0
offset_right = 306.0
offset_bottom = 252.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_22qk0")

[node name="HostGame" type="Button" parent="."]
layout_mode = 0
offset_left = 64.0
offset_top = 67.0
offset_right = 108.0
offset_bottom = 97.0
text = "Host"

[node name="JoinGame" type="Button" parent="."]
layout_mode = 0
offset_left = 125.0
offset_top = 67.0
offset_right = 163.0
offset_bottom = 98.0
text = "Join"

[node name="StartGame" type="Button" parent="."]
layout_mode = 0
offset_left = 183.0
offset_top = 67.0
offset_right = 229.0
offset_bottom = 98.0
disabled = true
text = "Start"

[node name="LineEdit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 98.0
offset_top = 23.0
offset_right = 336.0
offset_bottom = 54.0

[node name="NameLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 34.0
offset_top = 23.0
offset_right = 74.0
offset_bottom = 46.0
rotation = -0.00103556
text = "Name:"

[node name="IPandPortLabel" type="Label" parent="."]
offset_left = 355.0
offset_top = 29.0
offset_right = 533.0
offset_bottom = 52.0
rotation = -0.00103556
text = "Host IP to connect to:"
autowrap_mode = 2

[node name="IPTextField" type="LineEdit" parent="."]
offset_left = 524.0
offset_top = 29.0
offset_right = 762.0
offset_bottom = 60.0

[node name="ReadonlyChatbox" type="ItemList" parent="."]
layout_mode = 0
offset_left = 796.0
offset_right = 1301.0
offset_bottom = 112.0

[connection signal="button_down" from="HostGame" to="." method="_on_host_game_button_down"]
[connection signal="button_down" from="JoinGame" to="." method="_on_join_game_button_down"]
[connection signal="button_down" from="StartGame" to="." method="_on_start_game_button_down"]
